tests/ui/const-generics/issues/issue-83466.stderr
error: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/issue-83466.rs:11:14
   |
LL |     S.func::<'a, 10_u32>()
   |              ^^
   |
note: the late bound lifetime parameter is introduced here
  --> $DIR/issue-83466.rs:6:13
   |
LL |     fn func<'a, U>(self) -> U {
   |             ^^
   = help: remove the explicit lifetime argument

error[E0747]: constant provided when a type was expected
  --> $DIR/issue-83466.rs:11:18
   |
LL |     S.func::<'a, 10_u32>()
   |                  ^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0747`.
